# pyprj_template

./: .editorconfig  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
src/pyprj_template/: __init__.py
