[project]
name = "pyprj-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zaspa", email = "zaaaspa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pyprj-template = "pyprj_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
